--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-i18next": "^14.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.4",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
