--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@draft-js-plugins/buttons": "^4.3.3",
-    "@draft-js-plugins/editor": "^4.1.4",
-    "@draft-js-plugins/static-toolbar": "^4.1.4",
-    "@draft-js-plugins/text-alignment": "^2.0.1",
+    "@draft-js-plugins/linkify": "^4.2.2",
+    "@mdxeditor/editor": "^2.9.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dompurify": "^3.0.8",
-    "draft-js": "^0.11.7",
     "flag-icons": "^7.1.0",
     "i18next": "^23.7.18",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -52,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1"
