--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "dompurify": "^3.0.8",
     "dotenv": "^16.4.1",
     "flag-icons": "^7.1.0",
@@ -19,8 +20,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "^5.0.1",
-    "sweetalert2": "^11.10.4",
+    "react-scripts": "^3.0.1",
+    "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
